
* New method "linarith" invokes existing linear arithmetic decision
procedure only.

* Implementation of quickcheck using generic code generator; default generators
are provided for all suitable HOL types, records and datatypes.

* Constants Set.Pow and Set.image now with authentic syntax; object-logic definitions
Set.Pow_def and Set.image_def.  INCOMPATIBILITY.

* Discontinued ancient tradition to suffix certain ML module names with "_package", e.g.:

    DatatypePackage ~> Datatype
    InductivePackage ~> Inductive

    etc.

INCOMPATIBILITY.

* NewNumberTheory: Jeremy Avigad's new version of part of NumberTheory.
If possible, use NewNumberTheory, not NumberTheory.

* Simplified interfaces of datatype module.  INCOMPATIBILITY.


*** ML ***

* Eliminated old Attrib.add_attributes, Method.add_methods and related
cominators for "args".  INCOMPATIBILITY, need to use simplified
Attrib/Method.setup introduced in Isabelle2009.


*** System ***

* Discontinued support for Poly/ML 4.x versions.

* Removed "compress" option from isabelle-process and isabelle usedir;
this is always enabled.



New in Isabelle2009 (April 2009)
--------------------------------

*** General ***

* Simplified main Isabelle executables, with less surprises on
case-insensitive file-systems (such as Mac OS).

  - The main Isabelle tool wrapper is now called "isabelle" instead of
    "isatool."

  - The former "isabelle" alias for "isabelle-process" has been
    removed (should rarely occur to regular users).

  - The former "isabelle-interface" and its alias "Isabelle" have been
    removed (interfaces are now regular Isabelle tools).

Within scripts and make files, the Isabelle environment variables
ISABELLE_TOOL and ISABELLE_PROCESS replace old ISATOOL and ISABELLE,
respectively.  (The latter are still available as legacy feature.)

The old isabelle-interface wrapper could react in confusing ways if
the interface was uninstalled or changed otherwise.  Individual